--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,22 @@ services:
   db:
     image: postgres:16
     container_name: postgres-db
-    environment:
-      POSTGRES_USER: postgres_username
-      POSTGRES_PASSWORD: postgres_password
-      POSTGRES_DB: postgres_db_name
+    env_file: .env
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - mynetwork
+
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    env_file: .env
+    ports:
+      - "5050:80"
+    depends_on:
+      - db
     networks:
       - mynetwork
 
