--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,20 +4,26 @@ services:
     container_name: postgres-db
     env_file: .env
     ports:
-      - "5432:5432"
+      - "${POSTGRES_PORT}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - mynetwork
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $$POSTGRES_USER -d $$POSTGRES_DB"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   pgadmin:
     image: dpage/pgadmin4
     container_name: pgadmin
     env_file: .env
     ports:
-      - "5050:80"
+      - "${PGADMIN_PORT}:80"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     networks:
       - mynetwork
 
